[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/title.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/scripts/Options.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 548.0
margin_top = 298.0
margin_right = 732.0
margin_bottom = 421.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 184.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Options"
align = 1

[node name="MusicVolumeLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 184.0
margin_bottom = 68.0
text = "Music Volume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" type="HSlider" parent="CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 184.0
margin_bottom = 88.0
theme = SubResource( 3 )
value = 100.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolumePercent" type="Label" parent="CenterContainer/VBoxContainer/MusicVolume"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "100%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 184.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 2 )
text = "Back"
[connection signal="value_changed" from="CenterContainer/VBoxContainer/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
